  postings. (Adrien Grand, Uwe Schindler, Greg Miller)

* GITHUB##13644: Improve NumericComparator competitive iterator logic by comparing the missing value with the top
  value even after the hit queue is full (Pan Guixin)

* GITHUB#13587: Use Max WAND optimizations with ToParentBlockJoinQuery when using ScoreMode.Max (Mike Pellegrini)

Changes in runtime behavior
---------------------

* GITHUB#13472: When an executor is provided to the IndexSearcher constructor, the searcher now executes tasks on the
  thread that invoked a search as well as its configured executor. Users should reduce the executor's thread-count by 1
  to retain the previous level of parallelism. Moreover, it is now possible to start searches from the same executor
  that is configured in the IndexSearcher without risk of deadlocking. A separate executor for starting searches is no
  longer required. (Armin Braun)

Bug Fixes
---------------------

* GITHUB#13384: Fix highlighter to use longer passages instead of shorter individual terms. (Zack Kendall)

* GITHUB#13463: Address bug in MultiLeafKnnCollector causing #minCompetitiveSimilarity to stay artificially low in
  some corner cases. (Greg Miller)

* GITHUB#13553: Correct RamUsageEstimate for scalar quantized knn vector formats so that raw vectors are correctly
  accounted for. (Ben Trent)

* GITHUB#13615: Correct scalar quantization when used in conjunction with COSINE similarity. Vectors are normalized
  before quantization to ensure the cosine similarity is correctly calculated. (Ben Trent)

* GITHUB#13627: Fix race condition on flush for DWPT seqNo generation. (Ben Trent, Ao Li)

* GITHUB#13691: Fix incorrect exponent value in explain of SigmoidFunction. (Owais Kazi)

* GITHUB#13703: Fix bug in LatLonPoint queries where narrow polygons close to latitude 90 don't
  match any points due to an Integer overflow. (Ignacio Vera)

Build
---------------------
