@@ -394,6 +394,8 @@ Optimizations
 
 * GITHUB#13587: Use Max WAND optimizations with ToParentBlockJoinQuery when using ScoreMode.Max (Mike Pellegrini)
 
+* GITHUB#13742: Reorder checks in LRUQueryCache#count (Shubham Chaudhary)
+
 Changes in runtime behavior
 ---------------------
 
